# PSVR2Toolkit

./: .gitignore  .gitmodules  CMakeLists.txt  PSVR2Toolkit-CSharp.sln  PSVR2Toolkit.sln  README.md  wine.cmake
.github/: FUNDING.yml
.github/workflows/: cmake.yml  msbuild.yml
include/: common.h  hmd2_gaze.h  pad_trigger_effect.h  psvr2tk_capi.h
projects/: CMakeLists.txt
projects/PSVR2Toolkit.App/: App.axaml  App.axaml.cs  CaesarUpdatePackage.cs  Constants.cs  MainWindow.axaml  MainWindow.axaml.cs  PSVR2Toolkit.App.csproj  Program.cs  Utilities.cs  VRHMD.cs  app.manifest
projects/PSVR2Toolkit.Baballonia/: Class1.cs  PSVR2Toolkit.Baballonia.csproj  Vr2Capture.cs
projects/PSVR2Toolkit.IPC/: IpcClient.cs
projects/common/: CMakeLists.txt  common.h
projects/customshare/: CMakeLists.txt  customshare.cpp
projects/customsharetest/: CMakeLists.txt  main.cpp
projects/libcrossipc/: CMakeLists.txt  cross_ipc.cpp  cross_ipc.h  cross_ipc.spec  linux_ipc.cpp  linux_ipc.h  windows_ipc.cpp  windows_ipc.h
projects/libcustomshare/: CMakeLists.txt  custom_share_manager.cpp  custom_share_manager.h  libcustomshare.cpp  libcustomshare.vcxproj  libcustomshare.vcxproj.filters  util.h
projects/psvr2_openvr_driver_ex/: CMakeLists.txt  aston_manager_hooks.cpp  aston_manager_hooks.h  caesar_manager_hooks.cpp  caesar_usb_thread.cpp  caesar_usb_thread.h  command_thread.cpp  command_thread.h  config.h  device_provider_proxy.cpp  device_provider_proxy.h  driver_context_proxy.cpp  driver_context_proxy.h  driver_host_proxy.cpp  driver_host_proxy.h  hmd2_gaze.h  hmd_device_camera.cpp  hmd_device_camera.h  hmd_device_hooks.cpp  hmd_device_hooks.h  hmd_driver_factory.cpp  hmd_driver_loader.cpp  hmd_driver_loader.h  hmd_math.h  hmd_types.h  hook_lib.h  img_utils.h  ipc_server.cpp  ipc_server.h  libpad_hooks.cpp  libpad_hooks.h  math_helpers.h  openvr_driver_internal.h  psvr2_openvr_driver_ex.vcxproj  psvr2_openvr_driver_ex.vcxproj.filters  rolling_percentile.h  sense_controller.cpp  sense_controller.h  sense_crc.h  server_driver.cpp  (+12 more)
projects/psvr2_openvr_driver_ex/common/: hmd2_gaze.h
projects/psvr2_openvr_driver_ex/driver_hooks/: caesar_manager_hooks.cpp  hmd_device_hooks.cpp  libpad_hooks.cpp  sense_device_hooks.cpp  sense_device_hooks.h  share_manager_hooks.cpp  share_manager_hooks.h  usb_thread_hooks.cpp
projects/psvr2_openvr_driver_ex/driver_interface/: aston_context.h  aston_manager.h  caesar_manager.h  config_manager.h  share_manager.h  ukf_manager.h
projects/psvr2_openvr_driver_ex/hooks/: hmd_device_hooks.h
projects/psvr2_openvr_driver_ex/libusb/: CMakeLists.txt
projects/psvr2_openvr_driver_ex/minhook/lib/Debug/: libMinHook.x64.lib
projects/psvr2_openvr_driver_ex/minhook/lib/Release/: libMinHook.x64.lib
projects/psvr2_toolkit_app/: CMakeLists.txt  main.cpp
projects/psvr2_toolkit_capi/: CMakeLists.txt  capi.cpp  psvr2tk_capi.cpp  psvr2tk_capi.h  psvr2tk_capi_private.h
projects/psvr2_toolkit_capi_loader/: CMakeLists.txt  psvr2tk_capi_loader.cpp  psvr2tk_capi_loader.h  psvr2tk_capi_loader_private.h
projects/psvr2_toolkit_capi_test/: CMakeLists.txt  main.cpp
projects/psvr2_toolkit_legacy_ipc_server/: CMakeLists.txt  ipc_protocol.h  main.cpp
projects/psvr2_toolkit_redir/: CMakeLists.txt  dllmain.c  version.asm  version.def
projects/shared/: ipc_protocol.h
