add_library(psvr2_toolkit_capi_headers INTERFACE)

target_include_directories(psvr2_toolkit_capi_headers INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(psvr2_toolkit_capi_headers INTERFACE common)

add_library(psvr2_toolkit_capi SHARED
  psvr2tk_capi.cpp
)

target_link_libraries(psvr2_toolkit_capi PUBLIC libcustomshare psvr2_toolkit_capi_headers)
